--- a/calculator.html
+++ b/calculator.html
@@ -2,7 +2,7 @@
 <html>
     <head> 
         <title>prectice</title>
-        <script src="js/script.js"></script>
+        <script src="js/calculator.js"></script>
     </head>
     <body>
          <input type="text" id="firstbox">
