--- a/function.html
+++ b/function.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>control values</title>
-        <script src="js/script.js"></script>
+        <script src="js/function.js"></script>
     </head>
     <body>
         <input type="text" id="YourName">
