--- a/loops.html
+++ b/loops.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>loops</title>
-    <script src="js/script.js "></script>
+    <script src="js/loops.js"></script>
 </head>
 <body>
     <input type="button" value="loop" onclick="forloop()">
