--- a/array.html
+++ b/array.html
@@ -13,6 +13,12 @@
 
     <input type="button" value="pushArray" onclick="array1()"><br><br>
 
-    <input type="button" value="popArray" onclick="popArray()">
+    <input type="button" value="popArray" onclick="popArray()"><br><br>
+
+    <input type="button" value="sortArray" onclick="sortArray()"><br><br>
+
+    <input type="button" value="reverseArray" onclick="reverseArray()"><br><br>
+
+    <input type="button" value="decendingArray" onclick=" decendingArray()"><br><br>
 </body>
 </html>
