--- a/taskArray.html.html
+++ b/taskArray.html.html
@@ -8,9 +8,13 @@
 <body>
     <input type="text" id="capital">
     <input type="button" value="submit" onclick="createtask()">
-    <input type="button" value="Remove" onclick=" popArray()">
+    <input type="button" value="Remove" onclick=" popArray()"><br><br>
 
+   
+    <input type="button" value="while loop" onclick="whileArray()"><br><br>
     
-
+    <input type="text" id="small">
+    <input type="button" value="while submit" onclick=" callSubmit()">
+    <input type="button" value="while remove" onclick=" callRemove()">
 </body>
 </html>
