--- a/array.html
+++ b/array.html
@@ -20,5 +20,9 @@
     <input type="button" value="reverseArray" onclick="reverseArray()"><br><br>
 
     <input type="button" value="decendingArray" onclick=" decendingArray()"><br><br>
+
+    <input type="button" value="margeArray" onclick=" margeArray()"><br><br>
+
+    <input type="button" value="spliceArray" onclick="  spliceArray()"><br><br>
 </body>
 </html>
