--- a/array.html
+++ b/array.html
@@ -5,7 +5,7 @@
     <script src="js/array.js"></script>
 </head>
 <body>
-    <input type="button" value="click here" onclick=" forsum()">
+    <input type="button" value="click here" onclick=" forsum()"><br><br>
 
     <input type="button" value="click me" onclick="average()"><br><br>
 
@@ -24,5 +24,11 @@
     <input type="button" value="margeArray" onclick=" margeArray()"><br><br>
 
     <input type="button" value="spliceArray" onclick="  spliceArray()"><br><br>
+
+    <input type="button" value="updateArray" onclick="  updateArray()"><br><br>
+
+    <input type="button" value="sliceArray" onclick="  sliceArray()"><br><br>
+
+    <input type="button" value="joinArray" onclick="  joinArray()"><br><br>
 </body>
 </html>
