--- a/calculator.html
+++ b/calculator.html
@@ -5,8 +5,9 @@
         <script src="js/calculator.js"></script>
     </head>
     <body>
+        <h1>calculator 1</h1> <br><br>
          <input type="text" id="firstbox">
-        <br><br>
+        
          <input type="text" id="secondbox">
 
          <br><br>
@@ -16,6 +17,20 @@
          <input type="button" value="division" onclick="calculator('division')">
          <br><br>
 
-         ans :<label id="lblcreate"></label>
+         ans :<label id="lblcreate"></label><br><br><hr>
+
+         <!-- <h1>calculator 2</h1><br><br>
+
+         <input type="text" id="value a">   <input type="text" id="value b">
+         <br><br>
+         <input type="button" value="addition" onclick="calculator2('add')">
+         <input type="button" value="subtrction" onclick="calculator2('subt')">
+         <input type="button" value="multipication" onclick="calculator2('multi')">
+         <input type="button" value="division" onclick="calculator2('div')">
+         <br><br> -->
+
+
+        </body>
+
     </body>
 </html>
