--- a/taskArray.html.html
+++ b/taskArray.html.html
@@ -16,5 +16,6 @@
     <input type="text" id="small">
     <input type="button" value="while submit" onclick=" callSubmit()">
     <input type="button" value="while remove" onclick=" callRemove()">
+    <input type="button" value="while desending" onclick="  callDesending()">
 </body>
 </html>
