--- a/calculator.html
+++ b/calculator.html
@@ -19,7 +19,7 @@
 
          ans :<label id="lblcreate"></label><br><br><hr>
 
-         <!-- <h1>calculator 2</h1><br><br>
+         <h1>calculator 2</h1><br><br>
 
          <input type="text" id="value a">   <input type="text" id="value b">
          <br><br>
@@ -27,7 +27,7 @@
          <input type="button" value="subtrction" onclick="calculator2('subt')">
          <input type="button" value="multipication" onclick="calculator2('multi')">
          <input type="button" value="division" onclick="calculator2('div')">
-         <br><br> -->
+         <br><br>
 
 
         </body>
